apps/maritime-vacation-site/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maritime-vacation-site
  namespace: maritime-vacation-site
  annotations:
    app.commit-sha: "73c44e959f61"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: maritime-vacation-site
  template:
    metadata:
      labels:
        app: maritime-vacation-site
      annotations:
        app.commit-sha: "73c44e959f61"
    spec:
      imagePullSecrets:
      - name: ghcr-pull
      containers:
      - name: app
        image: ghcr.io/brettswift/maritime-vacation-site:73c44e959f6152773140b2506088ff9ba350d7db
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
