apps/maritime-vacation-site/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maritime-vacation-site
  namespace: maritime-vacation-site
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    name: http
  selector:
    app: maritime-vacation-site
