apps/maritime-vacation-site/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maritime-vacation-site
  namespace: maritime-vacation-site
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    external-dns.alpha.kubernetes.io/hostname: vacation.home.brettswift.com
    external-dns.alpha.kubernetes.io/target: home.brettswift.com
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vacation.home.brettswift.com
    # Same wildcard cert as openclaw.home.brettswift.com (cert-manager / cluster TLS)
    secretName: home-brettswift-com-tls
  rules:
  - host: vacation.home.brettswift.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: maritime-vacation-site
            port:
              number: 80
